<resources>
    <string name="app_name">备忘录</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_text">TextActivity</string>
    <string name="title_text">备忘录</string>
    <string name="you_mobile">你的手机号码</string>
    <string name="country_code">+86</string>
    <string name="Verification_Code">验证码</string>
    <string name="has_code">获取验证码</string>
    <string name="input_pwd">填写密码</string>
    <string name="new_password">新密码</string>
    <string name="confirmpassword">确认密码</string>
    <string name="resetPassword">重置密码</string>
    <string name="register">用户注册</string>
    <string name="example">例如：陈晨</string>
    <string name="nickname">昵称</string>
    <string name="password">密码</string>
    <string name="repassword">确认密码</string>
    <string name="login">登录</string>
    <string name="attach_take_pic">拍照</string>
    <string name="no_permission_camera">未授权的权限</string>
    <string name="my_image_manager">我的相册</string>
    <string name="image_manager">相册</string>
    <string name="permission_ok">get the permission successfull </string>
    <string name="permission_error">获取权限失败</string>
    <string name="not_set">未设置</string>
    <string name="region">地区</string>
    <string name="Personal_signature">个性签名</string>
    <string name="mobile">手机号</string>
    <string name="send_msg">发送消息</string>
    <string name="add_to_contacts">添加到通讯录</string>
    <string name="Head_portrait">头像</string>
    <string name="yichat_number">ID</string>
    <string name="me_qrcode">我的身份二维码</string>
    <string name="sex">性别</string>
    <string name="memo">备忘录</string>
    <string name="pending">待办</string>
    <string name="reminder">提醒</string>
    <string name="image">图片</string>
    <string name="star">收藏</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="remember_pass">记住密码</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
