<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolkit"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_scrollFlags="scroll|enterAlways|snap"/>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_marginRight="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <EditText
                    android:id="@+id/et_usertel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bg_et"
                    android:hint="@string/you_mobile"
                    android:inputType="phone"
                    android:paddingLeft="90dp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="#DDDDDD"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_country_code"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_alignLeft="@id/et_usertel"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/country_code"
                    android:textColor="#353535"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_smscode"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginRight="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/et_code"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="40dp"
                    android:layout_toLeftOf="@+id/btn_code"
                    android:background="@drawable/bg_et"
                    android:hint="@string/Verification_Code"
                    android:inputType="number"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColorHint="#DDDDDD"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_code"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:background="@drawable/bg_btn_green"
                    android:gravity="center"
                    android:text="@string/has_code"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:layout_alignTop="@+id/et_code"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginRight="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">


                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignBottom="@+id/tv_password"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/bg_et"
                    android:hint="@string/input_pwd"
                    android:inputType="textPassword"
                    android:paddingLeft="90dp"
                    android:singleLine="true"
                    android:textColorHint="#DDDDDD"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_alignLeft="@id/et_password"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/new_password"
                    android:textColor="#353535"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginRight="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/et_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bg_et"
                    android:hint="@string/input_pwd"
                    android:paddingLeft="90dp"
                    android:singleLine="true"
                    android:textColorHint="#DDDDDD"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_alignLeft="@id/et_password_confirm"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/confirmpassword"
                    android:textColor="#353535"
                    android:textSize="16sp" />


            </RelativeLayout>

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_btn_green"
                android:text="@string/resetPassword"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>