<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.memorandum.activity.RegisterActivity">
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolkit"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_scrollFlags="scroll|enterAlways|snap"/>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp" >

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/icon_camera" />

        <EditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/iv_photo"
            android:background="@drawable/bg_et"
            android:gravity="center_vertical"
            android:hint="@string/example"
            android:paddingLeft="90dp"
            android:singleLine="true"
            android:textColorHint="#DDDDDD"
            android:textSize="16sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:layout_alignLeft="@id/nickname"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/nickname"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp" >

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_et"
            android:hint="@string/you_mobile"
            android:inputType="phone"
            android:paddingLeft="90dp"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="#DDDDDD"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_country_code"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/email"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/country_code"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="13dp"
        android:text="模拟获取验证码，未接入真实服务商"
        />
    <RelativeLayout
        android:id="@+id/rl_smscode"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <Button
            android:id="@+id/btn_code"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_btn_green"
            android:gravity="center"
            android:text="@string/has_code"
            android:textColor="#fff"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="40dp"
            android:layout_toLeftOf="@+id/btn_code"
            android:background="@drawable/bg_et"
            android:hint="@string/Verification_Code"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColorHint="#DDDDDD"
            android:textSize="16sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp" >

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_et"
            android:hint="@string/input_pwd"
            android:paddingLeft="90dp"
            android:password="true"
            android:singleLine="true"
            android:textColorHint="#DDDDDD"
            android:textSize="16sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/password"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/password"
            android:textColor="#353535"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_hide"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:padding="10dp"
                android:src="@drawable/fx_icon_hide" />

            <ImageView
                android:id="@+id/iv_show"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:padding="10dp"
                android:src="@drawable/fx_icon_show"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp" >

        <EditText
            android:id="@+id/repassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_et"
            android:hint="@string/input_pwd"
            android:paddingLeft="90dp"
            android:password="true"
            android:singleLine="true"
            android:textColorHint="#DDDDDD"
            android:textSize="16sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/repassword"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/repassword"
            android:textColor="#353535"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_hide_re"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:padding="10dp"
                android:src="@drawable/fx_icon_hide" />

            <ImageView
                android:id="@+id/iv_show_re"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:padding="10dp"
                android:src="@drawable/fx_icon_show"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>
    <!--<android.support.design.widget.TextInputLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<AutoCompleteTextView-->
            <!--android:id="@+id/email"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:hint="QQ号/邮箱"-->
            <!--android:inputType="textEmailAddress"-->
            <!--android:maxLines="1"-->
            <!--android:singleLine="true"/>-->

    <!--</android.support.design.widget.TextInputLayout>-->

    <!--<android.support.design.widget.TextInputLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<EditText-->
            <!--android:id="@+id/password"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="密码"-->
            <!--android:imeActionLabel="添加或注册账号"-->
            <!--android:imeOptions="actionUnspecified"-->
            <!--android:inputType="textPassword"-->
            <!--android:maxLines="1"-->
            <!--android:singleLine="true"/>-->

    <!--</android.support.design.widget.TextInputLayout>-->


    <!--<android.support.design.widget.TextInputLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<EditText-->
            <!--android:id="@+id/repassword"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="确认密码"-->
            <!--android:imeActionLabel="添加或注册账号"-->
            <!--android:imeOptions="actionUnspecified"-->
            <!--android:inputType="textPassword"-->
            <!--android:maxLines="1"-->
            <!--android:singleLine="true"/>-->

    <!--</android.support.design.widget.TextInputLayout>-->

    <!--<android.support.design.widget.TextInputLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<EditText-->
            <!--android:id="@+id/nickname"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="昵称"-->
            <!--android:imeActionLabel="添加或注册账号"-->
            <!--android:imeOptions="actionUnspecified"-->
            <!--android:inputType="text"-->
            <!--android:maxLines="1"-->
            <!--android:singleLine="true"/>-->

    <!--</android.support.design.widget.TextInputLayout>-->



    <Button
        android:id="@+id/email_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_btn_green"
        android:paddingBottom="7dp"
        android:paddingTop="7dp"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="18sp" />


</LinearLayout>