<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.memorandum.activity.LoginActivity">
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolkit"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_scrollFlags="scroll|enterAlways|snap"/>
    </android.support.design.widget.AppBarLayout>


    <!--ScrollView滚动视图是指当拥有很多内容，屏幕显示不完时，需要通过滚动跳来显示的视图。ScrollView只支持垂直滚动。-->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <!--<AutoCompleteTextView-->
                    <!--android:id="@+id/email"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="QQ号/手机/邮箱"-->
                    <!--android:inputType="textEmailAddress"-->
                    <!--android:maxLines="1"-->
                    <!--android:singleLine="true"/>-->

            <!--</android.support.design.widget.TextInputLayout>-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bg_et"
                    android:hint="@string/you_mobile"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:paddingLeft="90dp"
                    android:singleLine="true"
                    android:textColorHint="#DDDDDD"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_country_code"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/email"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/country_code"
                    android:textColor="#353535"
                    android:textSize="16sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bg_et"
                    android:hint="@string/input_pwd"
                    android:inputType="textPassword"
                    android:paddingLeft="90dp"
                    android:singleLine="true"
                    android:textColorHint="#DDDDDD"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/password"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/password"
                    android:textColor="#353535"
                    android:textSize="16sp" />
            </RelativeLayout>
            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <!--<EditText-->
                    <!--android:id="@+id/password"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="密码"-->
                    <!--android:imeActionLabel="添加或注册账号"-->
                    <!--android:imeOptions="actionUnspecified"-->
                    <!--android:inputType="textPassword"-->
                    <!--android:maxLines="1"-->
                    <!--android:singleLine="true"/>-->

                <!--&lt;!&ndash;-->
                <!--android:imeActionId 设置IME动作ID，在onEditorAction中捕获判断进行逻辑操作。-->
                <!--android:imeActionLabel  设置IME动作标签。但是不能保证一定会使用，猜想在输入法扩展的时候应该有用。-->
                <!--android:imeOptions  设置软键盘的Enter键。-->
                <!--&ndash;&gt;-->

            <!--</android.support.design.widget.TextInputLayout>-->

            <!--<Button-->
                <!--android:id="@+id/email_sign_in_button"-->
                <!--style="?android:textAppearanceSmall"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="16dp"-->
                <!--android:background="@color/colorPrimary"-->
                <!--android:textColor="#fff"-->
                <!--android:text="登录"-->
                <!--android:textStyle="bold"/>-->
            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_btn_green"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:text="@string/login"
                android:textColor="@color/login_btn_text_color"
                android:textSize="18sp" />

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:textColor="#576B95"
                android:gravity="center"
                android:background="#00ffffff"
                android:layout_gravity="right"
                android:text="注册新账号"
                android:textSize="14sp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>



    <!--
        控件AutoCompleteTextView 客户端保存搜索历史自动提示
        AutoCompleteTextView常用属性

        android:completionHint	            设置出现在下拉菜单中的提示标题
        android:completionThreshold	        设置用户至少输入多少个字符才会显示提示
        android:dropDownHorizontalOffset	下拉菜单于文本框之间的水平偏移。默认与文本框左对齐
        android:dropDownHeight	            下拉菜单的高度
        android:dropDownWidth	            下拉菜单的宽度
        android:singleLine	                单行显示
        android:dropDownVerticalOffset	    垂直偏移量
    -->